[FLINK-33306] Use observed source throughput as true processing rate